--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<!-- Edited by Usama -->
+<!-- Edited by Usama Double - Fork -->
     <div class="wrapper">
         <h1>Weather App</h1>
 
